--- a/PhuAgain2/views/pages/home.pug
+++ b/PhuAgain2/views/pages/home.pug
@@ -7,6 +7,6 @@ block content
         li 
            div 
               p 
-                a(href="#")
+                a(href=`http://localhost:3000/articles/${article.slug}`)
                   strong #{article.title}
               p #{article.content}
