--- a/PhuAgain2/views/pages/newArticle.pug
+++ b/PhuAgain2/views/pages/newArticle.pug
@@ -1,19 +1,52 @@
+//- extends ../layout/main.pug
+
+//- block content
+//-     p Add new article
+//-     form(action="/articles", method="post") 
+//-         label Title 
+//-         br
+//-         input#title(type='text' name='title')
+//-         br
+//-         br
+//-         lbel Content 
+//-         br
+//-         input#content(type='text' name='content')
+//-         br
+//-         br
+//-         button Create
+
+//-         form
+
+//-         form
+//-         .mb-3
+//-             label.form-label(for='exampleInputEmail1') Email address
+//-             input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp')
+//-             #emailHelp.form-text We&apos;ll never share your email with anyone else.
+//-         .mb-3
+//-             label.form-label(for='exampleInputPassword1') Password
+//-             input#exampleInputPassword1.form-control(type='password')
+//-         .mb-3.form-check
+//-             input#exampleCheck1.form-check-input(type='checkbox')
+//-             label.form-check-label(for='exampleCheck1') Check me out
+//-         button.btn.btn-primary(type='submit') Submit
+
+
+
+//- block scripts
+//-     script(src="/js/article.js") 
+
+//- bai anh phu 
+  
 extends ../layout/main.pug
 
 block content
-    p Add new article
-    form(action="/articles", method="post") 
-        label Title 
-        br
+    form(action="/articles", method="post")
+        label Title
         input#title(type='text' name='title')
-        br
-        br
-        lbel Content 
-        br
+        label Content 
         input#content(type='text' name='content')
-        br
-        br
         button Create
 
+
 block scripts
-    script(src="/js/article.js") 
+    script(src='/js/article.js')
