--- a/PhuAgain2/views/pages/updateArticle.pug
+++ b/PhuAgain2/views/pages/updateArticle.pug
@@ -18,15 +18,12 @@ block content
                 #{article.content}
         br
         
-        button.btn.btn-primary(type='submit') Update
+        button.btn.btn-primary(type='submit') Ok
 
 
- 
-
-
-    //- form(method='POST')
-    //-     input(type='text' name='_method' value='put')
-    //-     button.btn.btn-primary(type='submit') Update
 
 block scripts
-    script(src='/js/article.js')
+    script(src='/js/update.js')
+   
+        
+       
